Added application properties file, configured for publishing using AWS Beanstalk, Updated tarifas views so they work correct